6968385: malformed xml in sweeper logging

Reviewed-by: kvn